--- a/web/src/App.module.scss
+++ b/web/src/App.module.scss
@@ -8,3 +8,14 @@
   column-gap: 120px;
   position: relative;
 }
+.contentSigned::before {
+  content: "";
+  height: 100vh;
+  width: 420px;
+  background: linear-gradient(180deg, #ff008e 0%, #ffcd1e 100%);
+  background-repeat: no repeat;
+  background-size: cover;
+  position: absolute;
+  right: -200px;
+  top: 0;
+}
