--- a/web/src/components/SendMessage/styles.module.scss
+++ b/web/src/components/SendMessage/styles.module.scss
@@ -11,6 +11,13 @@
   position: relative;
 }
 
+.seal {
+  position: absolute;
+  width: 88px;
+  height: 88px;
+  left: 320px;
+  top: -50px;
+}
 .signOutButton {
   background: transparent;
   border: 0;
